# ManagedContainer

./: CMakeLists.txt  LICENSE  README.md
include/: ManagedContainer.h
tests/: test.cpp
